--- a/templates/messages/show_one.html.twig
+++ b/templates/messages/show_one.html.twig
@@ -3,16 +3,8 @@
 {% block title %}Hello MessagesController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<h1>Wiadomość {{ id }}</h1>
+<p>{{ message }}</p>
+<a href="{{ path('app_messages') }}">Powrót do listy wiadomości</a>
 
-<div class="example-wrapper">
-    <h1>Hello {{ id }}! ✅</h1>
-<div class="bg-blue-500 text-white p-4 rounded-lg">
-    Hello Tailwind!
-</div>
-    
-</div>
 {% endblock %}
